adding responsiveness to projects and skills scroll

--- a/index.html
+++ b/index.html
@@ -478,5 +478,11 @@
 
 
     <script src="script.js"></script>
+    
+    <!-- Back to Top Button -->
+<button id="back-to-top" class="back-to-top">
+    <i class="fas fa-arrow-up"></i>
+</button>
+
 </body>
 </html>
