--- a/index - Copy.html
+++ b/index - Copy.html
@@ -23,11 +23,8 @@
 
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="fallback-image.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-
 </head>
 <body>
     <!-- Header & Navigation -->
@@ -88,7 +85,7 @@
                     <p>I’m Gabriel Kadiwa, a passionate tech enthusiast with a knack for solving problems across the digital landscape. As a full-stack developer, I craft efficient and user-friendly software, while my IT expertise ensures systems run smoothly and securely.</p>
                     <p>Beyond tech, I thrive as a tutor, helping students unlock their potential in programming and beyond. Whether it’s writing code, managing networks, or teaching, I’m driven by a commitment to excellence and a love for making technology accessible to everyone.</p>
                     <div class="about-buttons">
-                        <a href="https://drive.google.com/file/d/1d94C1hJKNLGjucdQKo4s6frmXHIis32W/view?usp=drive_link" class="btn primary-btn" target="_blank">View CV</a>
+                        <a href="your-resume.pdf" class="btn primary-btn" target="_blank">View Resume</a>
                     </div>
                 </div>
                 <div class="about-stats">
@@ -97,11 +94,11 @@
                         <p>Years Experience</p>
                     </div>
                     <div class="stat-item">
-                        <h3>25+</h3>
+                        <h3>20+</h3>
                         <p>Projects Completed</p>
                     </div>
                     <div class="stat-item">
-                        <h3>20+</h3>
+                        <h3>10+</h3>
                         <p>Happy Clients</p>
                     </div>
                 </div>
@@ -333,13 +330,13 @@
                         <div class="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="images/github_fork_me.jpg" alt="Project 1 Screenshot 1">
+                                    <img src="project1-img1.jpg" alt="Project 1 Screenshot 1">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="images/pexels-emily-ranquist-493228-1205651.jpg" alt="Project 1 Screenshot 2">
+                                    <img src="project1-img2.jpg" alt="Project 1 Screenshot 2">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="images/pexels-huy-phan-316220-17479952.jpg" alt="Project 1 Screenshot 3">
+                                    <img src="project1-img3.jpg" alt="Project 1 Screenshot 3">
                                 </div>
                             </div>
                             <button class="carousel-control prev">
@@ -357,6 +354,45 @@
                             <span>React</span>
                             <span>Node.js</span>
                             <span>MongoDB</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank" class="btn small-btn">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                            <a href="#" target="_blank" class="btn small-btn">
+                                <i class="fab fa-github"></i> Source Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="project2-img1.jpg" alt="Project 2 Screenshot 1">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="project2-img2.jpg" alt="Project 2 Screenshot 2">
+                                </div>
+                            </div>
+                            <button class="carousel-control prev">
+                                <i class="fas fa-chevron-left"></i>
+                            </button>
+                            <button class="carousel-control next">
+                                <i class="fas fa-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Project Name 2</h3>
+                        <p>A brief description of this amazing project and what technologies were used to build it.</p>
+                        <div class="project-tech">
+                            <span>HTML/CSS</span>
+                            <span>JavaScript</span>
+                            <span>API Integration</span>
                         </div>
                         <div class="project-links">
                             <a href="#" target="_blank" class="btn small-btn">
@@ -430,8 +466,6 @@
             </div>
         </div>
     </footer>
-
-    <script src="github-projects.js"></script>
 
     <script>  
     // Get the current year  
